# giq1

./: .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  NOTE  README.md  __init__.py  _comparison_summary.txt  agora_ancestor.txt  agora_to_csv.py  analysis_report.md  busco_dotplotter.py  car_analyser.py  car_gene_assignments_scaffolded-chr-aware.txt  dioctria_linearis_test.tsv  dotplotter.py  lineariser.py  main.py  markov_to_csv.py  markov_to_cvs.py  output.txt  output13.txt  output2  output2.txt  output3.txt  output5.txt  output6.txt  output7.txt  output9.txt  pyproject.toml  script.txt  scriptt.txt  setup.py  simple_dotplotter.py  test_flip_logic.py  test_sequence_example.py
TestingAgora/: busco_ids_all.txt  chromosome_groups.txt  homologous_chromosomes.txt  testingAgora_comparison_summary.txt
agora_results/: ancGenome.552100.00.list.bz2  ancGenome.553100.00.list.bz2  blocks.552100.00.list.bz2  blocks.553100.00.list.bz2  car_gene_assignments-anchor6.txt  car_gene_assignments_scaffolded.txt  graph.552100.00.txt.bz2  graph.553100.00.txt.bz2  pairs.552100.00.list.bz2  pairs.553100.00.list.bz2
compare/: compare_comparison_summary.txt  giq_ord_genes.txt  linearization_summary.txt  tsxt.txt
comparison_output/: alignment_summary.json  chromosome_mappings.json  markov_profile.json
comparison_output-l/: alignment_summary.json  chromosome_mappings.json
comparison_output-ll/: chromosome_mappings.json  pairwise_results_Dioctria_linearis_midcut_vs_Dioctria_rufipes_midcut.json
comparison_output_500/: iteration_report_Dioctria_linearis_500_vs_Dioctria_rufipes_500.md  (+1 more)
(+229 files in other folders)
